# PassKey

./: .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  crypto.py  db.py  main.py  models.py  schemas.py  webauthn_helpers.py
backend/app/routes/: vault.py  webauthn.py
backend/tests/: test_smoke.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  webauthn.ts
frontend/src/components/: VaultEntryForm.tsx
frontend/src/pages/: Login.tsx  Register.tsx  Vault.tsx
